--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,21 +1,21 @@
-name: Build AmneziaWG iOS
+name: Quick Build
 
-on:
-  workflow_dispatch:  # Ручной запуск
-  push:
-    branches: [ main ]
+on: [workflow_dispatch]
 
 jobs:
-  build:
+  build-ios:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Install dependencies
-        run: |
-          brew install swiftlint go
-      
-      - name: Build project
-        run: |
-          cp Sources/WireGuardApp/Config/Developer.xcconfig.template Sources/WireGuardApp/Config/Developer.xcconfig
-          xcodebuild -project WireGuard.xcodeproj -scheme WireGuardiOS -configuration Release archive -archivePath AmneziaWG.xcarchive CODE_SIGNING_ALLOWED=NO
+      - run: brew install swiftlint go
+      - run: cp Sources/WireGuardApp/Config/Developer.xcconfig.template Sources/WireGuardApp/Config/Developer.xcconfig
+      # Проверяем доступные схемы
+      - run: xcodebuild -list -project WireGuard.xcodeproj
+      # Собираем для iOS
+      - run: xcodebuild -project WireGuard.xcodeproj -scheme "WireGuard" -configuration Release -destination 'generic/platform=iOS' build CODE_SIGNING_ALLOWED=NO
+      # Собираем для macOS
+      - run: xcodebuild -project WireGuard.xcodeproj -scheme "WireGuard" -configuration Release -destination 'generic/platform=macOS' build CODE_SIGNING_ALLOWED=NO
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: build/
