--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,21 +1,41 @@
-name: Quick Build
+name: Build AmneziaWG macOS
 
-on: [workflow_dispatch]
+on:
+  workflow_dispatch:
 
 jobs:
-  build-ios:
+  build-macos:
     runs-on: macos-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - run: brew install swiftlint go
-      - run: cp Sources/WireGuardApp/Config/Developer.xcconfig.template Sources/WireGuardApp/Config/Developer.xcconfig
-      # Проверяем доступные схемы
-      - run: xcodebuild -list -project WireGuard.xcodeproj
-      # Собираем для iOS
-      - run: xcodebuild -project WireGuard.xcodeproj -scheme "WireGuard" -configuration Release -destination 'generic/platform=iOS' build CODE_SIGNING_ALLOWED=NO
-      # Собираем для macOS
-      - run: xcodebuild -project WireGuard.xcodeproj -scheme "WireGuard" -configuration Release -destination 'generic/platform=macOS' build CODE_SIGNING_ALLOWED=NO
-      - uses: actions/upload-artifact@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install dependencies
+        run: brew install swiftlint go
+      
+      - name: Configure project
+        run: |
+          cp Sources/WireGuardApp/Config/Developer.xcconfig.template Sources/WireGuardApp/Config/Developer.xcconfig
+      
+      - name: Check available schemes
+        run: xcodebuild -list -project WireGuard.xcodeproj
+      
+      - name: Build macOS app
+        run: |
+          xcodebuild -project WireGuard.xcodeproj \
+                     -scheme "WireGuard" \
+                     -configuration Release \
+                     -destination 'generic/platform=macOS' \
+                     build \
+                     CODE_SIGNING_ALLOWED=NO \
+                     CODE_SIGN_IDENTITY="" \
+                     CODE_SIGNING_REQUIRED=NO \
+                     GCC_GENERATE_DEBUGGING_SYMBOLS=NO
+      
+      - name: Upload application
+        uses: actions/upload-artifact@v4
         with:
-          name: build-output
-          path: build/
+          name: AmneziaWG-macOS-unsigned
+          path: build/Release/WireGuard.app
+          retention-days: 7
